--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!--
+Tier List Site
+Version: 1.4
+Theme: Crop Queue
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,11 +25,14 @@
 
     /* Crop modal */
     #cropModal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.7); justify-content: center; align-items: center; z-index: 999; }
-    #cropBox { background: white; padding: 20px; border-radius: 10px; }
+    #cropBox { background: white; padding: 20px; border-radius: 10px; max-width: 90vw; max-height: 90vh; }
     #cropCanvas { max-width: 80vw; max-height: 80vh; cursor: crosshair; background: black; }
     #cropControls { text-align: right; margin-top: 10px; }
     #cropControls button { padding: 5px 10px; margin-left: 5px; }
     #cropStatus { margin-bottom: 10px; font-weight: bold; }
+
+    /* Footer */
+    #footer { position: fixed; bottom: 0; left: 0; width: 100%; background: rgba(0,0,0,0.6); color: #fff; font-size: 14px; text-align: center; padding: 5px; z-index: 1000; box-shadow: 0 -2px 5px rgba(0,0,0,0.3); }
 </style>
 </head>
 <body>
@@ -47,6 +56,9 @@
         </div>
     </div>
 </div>
+
+<!-- Footer -->
+<div id="footer">Version 1.4 — Crop Queue</div>
 
 <script>
 const tierData = [
