--- a/index.html
+++ b/index.html
@@ -1,41 +1,33 @@
-<!-- Version 1.6.1 — Save/Load + Crop + Add Categories + Island Panel -->
+<!-- Version 1.7 — Core Functionality Rebuilt -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
+<meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Tier List</title>
 <style>
-body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f4f4f4; }
-h1{ text-align:center; margin:10px; }
+body{margin:0;padding:0;font-family:Arial,sans-serif;background:#f4f4f4;}
+h1{text-align:center;margin:10px;}
+.tier-container{display:flex;align-items:center;flex-wrap:wrap;margin:5px 10px;}
+.label{min-width:120px;padding:10px 15px;margin-right:10px;text-align:center;font-weight:bold;border-radius:12px;color:#fff;font-size:16px;box-shadow:2px 2px 8px rgba(0,0,0,.3);cursor:pointer;}
+.tier{display:flex;flex-wrap:wrap;gap:5px;padding:10px;min-height:80px;border-radius:12px;margin:5px 0;background:#fff;box-shadow:1px 1px 6px rgba(0,0,0,.2);flex:1;cursor:pointer;}
+.unranked{display:flex;flex-wrap:wrap;gap:5px;padding:10px;min-height:80px;background:#ddd;border:2px dashed #999;margin:5px 10px 20px;border-radius:12px;}
+.img-wrapper{position:relative;width:60px;height:60px;border-radius:6px;overflow:hidden;cursor:pointer;}
+.img-wrapper img{width:100%;height:100%;object-fit:cover;transition: transform .15s;}
+.img-wrapper:hover img{transform:scale(1.06);}
+.img-wrapper.selected{outline:3px solid #00e0ff;outline-offset:2px;}
+.delete-btn{position:absolute;top:-6px;right:-6px;background:rgba(255,0,0,.9);color:#fff;border:0;border-radius:50%;width:20px;height:20px;line-height:20px;font-size:14px;cursor:pointer;}
 
-.tier-container{ display:flex; align-items:center; flex-wrap:wrap; margin:5px 10px; }
-.label{ min-width:120px; padding:10px 15px; margin-right:10px; text-align:center; font-weight:bold; border-radius:12px; color:#fff; font-size:16px; box-shadow:2px 2px 8px rgba(0,0,0,.3); cursor:pointer; }
-.tier{ display:flex; flex-wrap:wrap; gap:5px; padding:10px; min-height:80px; border-radius:12px; margin:5px 0; background:#fff; box-shadow:1px 1px 6px rgba(0,0,0,.2); flex:1; cursor:pointer; }
-.unranked{ display:flex; flex-wrap:wrap; gap:5px; padding:10px; min-height:80px; background:#ddd; border:2px dashed #999; margin:5px 10px 20px; border-radius:12px; }
-.img-wrapper{ position:relative; display:inline-block; width:60px; height:60px; border-radius:6px; overflow:hidden; cursor:pointer; }
-.img-wrapper img{ width:100%; height:100%; object-fit:cover; transition: transform .15s; }
-.img-wrapper:hover img{ transform:scale(1.06); }
-.img-wrapper.selected{ outline:3px solid #00e0ff; outline-offset:2px; }
-.delete-btn{ position:absolute; top:-6px; right:-6px; background:rgba(255,0,0,.9); color:#fff; border:0; border-radius:50%; width:20px; height:20px; line-height:20px; font-size:14px; cursor:pointer; }
+/* Island panel */
+#island{position:fixed;bottom:10px;left:50%;transform:translateX(-50%);background:#888;padding:10px;border-radius:12px;box-shadow:2px 2px 12px rgba(0,0,0,.4);z-index:1000;transition:width 0.3s,max-height 0.3s;overflow:hidden;width:250px;max-height:40px;}
+#island.expanded{max-height:300px;width:400px;}
+#islandHeader{cursor:pointer;color:#fff;font-weight:bold;margin-bottom:5px;}
+#islandContent{display:none;flex-direction:column;}
+#island.expanded #islandContent{display:flex;}
 
-/* Footer island-style */
-#footer{ position:fixed; right:10px; bottom:10px; background:rgba(100,100,100,.55); color:#fff; font-size:12px; padding:4px 8px; border-radius:8px; z-index:100000; opacity:.85; display:flex; gap:6px; align-items:center; transition:width .3s; cursor:pointer; }
-.menu{ position:relative; }
-.menu button{ background:none; border:none; color:white; cursor:pointer; padding:4px 8px; font-size:0.85em; display:block; text-align:left; width:100%; }
-.menu-content{ display:none; position:absolute; bottom:100%; right:0; background:rgba(30,30,30,0.95); border-radius:10px; overflow:hidden; min-width:120px; }
-.menu:hover .menu-content{ display:block; }
-
-#addCategoryPanel{ display:none; position:fixed; bottom:60px; left:50%; transform:translateX(-50%); background:#fff; padding:10px; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,.3); }
-.color-option{ width:25px; height:25px; display:inline-block; margin:3px; border-radius:4px; cursor:pointer; border:2px solid #555; }
-
-#cropOverlay{ display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,.7); justify-content:center; align-items:center; z-index:10000; }
-#cropContainer{ position:relative; background:#fff; padding:10px; border-radius:8px; display:flex; flex-direction:column; align-items:center; }
-#cropImage{ max-width:80vw; max-height:80vh; object-fit:contain; }
-#cropButton{ margin-top:5px; padding:4px 8px; border:none; background:#28a745; color:white; border-radius:4px; cursor:pointer; }
-
-input[type="file"]{ margin:10px; display:block; }
-@media(max-width:600px){ .label{ min-width:90px; font-size:14px; padding:8px 12px; } .img-wrapper{ width:50px;height:50px; } }
+/* Buttons inside island */
+.island-btn{margin:3px;padding:4px 6px;border:none;border-radius:4px;background:#aaa;color:#fff;cursor:pointer;}
+.color-option{width:25px;height:25px;display:inline-block;margin:3px;border-radius:4px;cursor:pointer;border:2px solid #555;}
 </style>
 </head>
 <body>
@@ -48,164 +40,129 @@ input[type="file"]{ margin:10px; display:block; }
 <h3 style="margin-left:10px;">Unranked</h3>
 <div class="unranked" id="unranked"></div>
 
-<!-- Add Category Panel -->
-<div id="addCategoryPanel">
-<label>Category Name: <input type="text" id="newCategoryName" /></label><br>
-<div id="bgColors"></div>
-<button id="createCategoryBtn">Add Category</button>
+<!-- Island Panel -->
+<div id="island">
+  <div id="islandHeader">Options</div>
+  <div id="islandContent">
+    <button id="saveBtn" class="island-btn">Save</button>
+    <button id="loadBtn" class="island-btn">Load</button>
+    <button id="addCatBtn" class="island-btn">Add Category</button>
+    <button id="creditsBtn" class="island-btn">Credits</button>
+
+    <div id="addCategoryPanel" style="display:none;margin-top:5px;">
+      <label>Category Name: <input type="text" id="newCategoryName"/></label><br>
+      <div id="bgColors"></div>
+      <button id="createCategoryBtn" class="island-btn">Create Category</button>
+    </div>
+
+    <div id="creditsPanel" style="display:none;margin-top:5px;color:white;">
+      Made by AI — GPT-5 Mini, OpenAI.
+    </div>
+  </div>
 </div>
 
 <!-- Crop Overlay -->
-<div id="cropOverlay">
-  <div id="cropContainer">
-    <img id="cropImage"/>
-    <button id="cropButton">OK</button>
+<div id="cropOverlay" style="display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,.7);justify-content:center;align-items:center;z-index:10000;display:flex;">
+  <div style="position:relative;background:#fff;padding:10px;border-radius:8px;display:flex;flex-direction:column;align-items:center;">
+    <img id="cropImage" style="max-width:80vw;max-height:80vh;object-fit:contain;"/>
+    <button id="cropButton" class="island-btn" style="margin-top:5px;">OK</button>
   </div>
 </div>
 
-<footer id="footer">
-  <div id="footerText">Version 1.6.1 — Crop/Save/Category</div>
-  <div class="menu">
-    ☰
-    <div class="menu-content">
-      <button id="saveBtn">Save Tierlist</button>
-      <button id="loadBtn">Load Tierlist</button>
-      <button id="addCatBtn">Add Category</button>
-      <button id="creditsBtn">Credits</button>
-    </div>
-  </div>
-</footer>
-
-<input type="file" id="fileInput" accept=".json" style="display:none" />
+<input type="file" id="fileInput" accept=".json" style="display:none"/>
 
 <script>
-// ---------------- TIERS ----------------
-const tierData = [
-  { score: 20 }, { score: 17 }, { score: 15 }, { score: 12 }, { score: 8 },
-  { score: 0 }, { score: -500 }
-];
-function scoreToColor(score){
-  if(score>=20) return "linear-gradient(45deg,#ff0000,#ff5555)";
-  if(score>=17) return "linear-gradient(45deg,#ff6a00,#ff9a00)";
-  if(score>=15) return "linear-gradient(45deg,#ffff00,#ffff66)";
-  if(score>=12) return "linear-gradient(45deg,#00cc00,#00ff00)";
-  if(score>=8)  return "linear-gradient(45deg,#0099ff,#00ccff)";
-  return "linear-gradient(45deg,#555,#999)";
-}
+// ---------- TIERS ----------
+const tierData=[20,17,15,12,8,0,-500];
+function scoreToColor(score){if(score>=20) return "red";if(score>=17) return "orange";if(score>=15) return "yellow";if(score>=12) return "green";if(score>=8) return "blue";return "gray";}
 function createTier(score,name){
   let container=document.createElement("div");
   container.className="tier-container";
   let label=document.createElement("div");
-  label.className="label";
-  label.style.background=scoreToColor(score);
-  label.textContent=name||score;
-  let tier=document.createElement("div");
-  tier.className="tier";
-  tier.dataset.score=score;
-  container.appendChild(label);
-  container.appendChild(tier);
+  label.className="label"; label.style.background=scoreToColor(score); label.textContent=name||score;
+  let tier=document.createElement("div"); tier.className="tier"; tier.dataset.score=score;
+  container.appendChild(label); container.appendChild(tier);
   document.getElementById("tiers").appendChild(container);
-  label.addEventListener("click",()=>{if(selectedWrapper){tier.appendChild(selectedWrapper); selectedWrapper.classList.remove("selected"); selectedWrapper=null; saveData();}});
-  tier.addEventListener("click",()=>{if(selectedWrapper){tier.appendChild(selectedWrapper); selectedWrapper.classList.remove("selected"); selectedWrapper=null; saveData();}});
+
+  // Click to place
+  [label,tier].forEach(el=>{
+    el.addEventListener("click",()=>{if(selectedWrapper){el.closest(".tier-container").querySelector(".tier").appendChild(selectedWrapper); selectedWrapper.classList.remove("selected"); selectedWrapper=null; saveData();}});
+  });
 }
-tierData.forEach(t=>createTier(t.score));
+tierData.forEach(t=>createTier(t));
 
-// ---------------- IMAGE UPLOAD & CROPPING ----------------
-let imgCount=0; let selectedWrapper=null; let cropQueue=[]; let cropping=false;
-
-function selectWrapper(wrapper){
-  if(selectedWrapper) selectedWrapper.classList.remove("selected");
-  selectedWrapper=wrapper;
-  if(wrapper) wrapper.classList.add("selected");
-}
-
+// ---------- IMAGE SELECTION ----------
+let imgCount=0, selectedWrapper=null, cropQueue=[], cropping=false;
+function selectWrapper(wrapper){ if(selectedWrapper) selectedWrapper.classList.remove("selected"); selectedWrapper=wrapper; if(wrapper) wrapper.classList.add("selected"); }
 function createImageWrapper(src){
-  const wrap=document.createElement("div");
-  wrap.className="img-wrapper"; wrap.id="img"+(++imgCount);
+  const wrap=document.createElement("div"); wrap.className="img-wrapper"; wrap.id="img"+(++imgCount);
   const img=document.createElement("img"); img.src=src;
   const del=document.createElement("button"); del.className="delete-btn"; del.textContent="×";
   del.addEventListener("click", e=>{e.stopPropagation(); wrap.remove(); if(selectedWrapper===wrap) selectedWrapper=null; saveData();});
   wrap.appendChild(img); wrap.appendChild(del);
-  wrap.addEventListener("click", ()=>{
-    if(wrap.closest(".tier") && !wrap.closest("#unranked")){ document.getElementById("unranked").appendChild(wrap); saveData(); }
-    else{ selectWrapper(selectedWrapper===wrap?null:wrap); }
-  });
+  wrap.addEventListener("click", ()=>{if(wrap.closest(".tier") && !wrap.closest("#unranked")){document.getElementById("unranked").appendChild(wrap); saveData();}else{selectWrapper(selectedWrapper===wrap?null:wrap);}});
   return wrap;
 }
 
-function addToUnranked(src){ 
+// ---------- IMAGE UPLOAD ----------
+function addToUnranked(src){
   let imgObj=new Image(); imgObj.src=src;
   imgObj.onload=()=>{
-    let w=imgObj.width, h=imgObj.height;
+    let w=imgObj.width,h=imgObj.height;
     if(Math.abs(w-h)/Math.max(w,h)>0.2){ cropQueue.push(src); if(!cropping) showCrop(); }
     else{ document.getElementById("unranked").appendChild(createImageWrapper(src)); saveData(); }
   }
 }
-
-function showCrop(){
-  if(cropQueue.length==0){ cropping=false; return; }
-  cropping=true;
-  const src=cropQueue.shift();
-  const cropOverlay=document.getElementById("cropOverlay");
-  const cropImage=document.getElementById("cropImage");
-  cropOverlay.style.display="flex"; cropImage.src=src;
-}
-document.getElementById("cropButton").addEventListener("click", ()=>{
+function showCrop(){if(cropQueue.length==0){cropping=false; return;} cropping=true; document.getElementById("cropOverlay").style.display="flex"; document.getElementById("cropImage").src=cropQueue.shift();}
+document.getElementById("cropButton").addEventListener("click",()=>{
   let src=document.getElementById("cropImage").src;
   document.getElementById("unranked").appendChild(createImageWrapper(src)); saveData();
-  document.getElementById("cropOverlay").style.display="none";
-  if(cropQueue.length>0) showCrop(); else cropping=false;
+  document.getElementById("cropOverlay").style.display="none"; if(cropQueue.length>0) showCrop(); else cropping=false;
 });
+document.getElementById("imageUpload").addEventListener("change", e=>{Array.from(e.target.files||[]).forEach(file=>{if(!file.type.startsWith("image/")) return; const reader=new FileReader(); reader.onload=ev=>addToUnranked(ev.target.result); reader.readAsDataURL(file);});});
 
-document.getElementById("imageUpload").addEventListener("change", e=>{
-  Array.from(e.target.files||[]).forEach(file=>{
-    if(!file.type.startsWith("image/")) return;
-    const reader=new FileReader();
-    reader.onload=ev=>addToUnranked(ev.target.result);
-    reader.readAsDataURL(file);
-  });
-});
-
-// ---------------- SAVE / LOAD ----------------
-function saveTierlist(){ 
-  let data={ title:document.getElementById("tierListTitle").innerText, tiers:[], unranked:[] };
-  document.querySelectorAll(".tier").forEach(t=>{
-    data.tiers.push({score:t.dataset.score, imgs:Array.from(t.querySelectorAll("img")).map(i=>i.src)});
-  });
+// ---------- SAVE/LOAD ----------
+function saveData(){
+  let data={title:document.getElementById("tierListTitle").innerText,tiers:[],unranked:[]};
+  document.querySelectorAll(".tier").forEach(t=>{data.tiers.push({score:t.dataset.score, imgs:Array.from(t.querySelectorAll("img")).map(i=>i.src)});});
   data.unranked=Array.from(document.getElementById("unranked").querySelectorAll("img")).map(i=>i.src);
-  let blob=new Blob([JSON.stringify(data)],{type:"application/json"});
-  let a=document.createElement("a"); a.href=URL.createObjectURL(blob); a.download="tierlist.json"; a.click();
+  return data;
 }
-document.getElementById("saveBtn").addEventListener("click",saveTierlist);
-
+document.getElementById("saveBtn").addEventListener("click",()=>{
+  let data=saveData(); let blob=new Blob([JSON.stringify(data)],{type:"application/json"}); let a=document.createElement("a"); a.href=URL.createObjectURL(blob); a.download="tierlist.json"; a.click();
+});
 document.getElementById("loadBtn").addEventListener("click",()=>document.getElementById("fileInput").click());
-document.getElementById("fileInput").addEventListener("change", e=>{
+document.getElementById("fileInput").addEventListener("change",e=>{
   let file=e.target.files[0]; if(!file) return;
   let reader=new FileReader();
-  reader.onload=function(ev){
+  reader.onload=ev=>{
     let data=JSON.parse(ev.target.result);
     document.getElementById("tierListTitle").innerText=data.title||"My Tier List";
     document.querySelectorAll(".tier").forEach(t=>t.innerHTML="");
-    data.tiers?.forEach((tdata, idx)=>{
-      let tier=document.querySelectorAll(".tier")[idx];
-      (tdata.imgs||[]).forEach(src=>tier.appendChild(createImageWrapper(src)));
-    });
+    data.tiers?.forEach((tdata,idx)=>{let tier=document.querySelectorAll(".tier")[idx]; (tdata.imgs||[]).forEach(src=>tier.appendChild(createImageWrapper(src)));});
     document.getElementById("unranked").innerHTML="";
     (data.unranked||[]).forEach(src=>addToUnranked(src));
-  };
-  reader.readAsText(file);
+  }; reader.readAsText(file);
 });
 
-// ---------------- ADD CATEGORY PANEL ----------------
+// ---------- ISLAND PANEL ----------
+const island=document.getElementById("island");
+const header=document.getElementById("islandHeader");
+const content=document.getElementById("islandContent");
+header.addEventListener("click",()=>island.classList.toggle("expanded"));
+
+// ---------- ADD CATEGORY PANEL ----------
 const colors=["#00ff00","#55ff00","#ccff00","#ffff00","#ff5500","#ff0000","#990000","#660066","#330033","#000000"];
 const bgContainer=document.getElementById("bgColors");
-colors.forEach(c=>{ let d=document.createElement("div"); d.className="color-option"; d.style.background=c; d.addEventListener("click",()=>{document.querySelectorAll(".color-option").forEach(el=>el.style.border="2px solid #555"); d.style.border="3px solid #00f"; selectedColor=c;}); bgContainer.appendChild(d); });
 let selectedColor=colors[0];
-document.getElementById("addCatBtn").addEventListener("click",()=>{ 
-  const panel=document.getElementById("addCategoryPanel"); 
-  panel.style.display=(panel.style.display==="flex")?"none":"flex"; panel.style.flexDirection="column"; 
-});
+colors.forEach(c=>{let d=document.createElement("div"); d.className="color-option"; d.style.background=c; d.addEventListener("click",()=>{document.querySelectorAll(".color-option").forEach(el=>el.style.border="2px solid #555"); d.style.border="3px solid #00f"; selectedColor=c;}); bgContainer.appendChild(d);});
+document.getElementById("addCatBtn").addEventListener("click",()=>{document.getElementById("addCategoryPanel").style.display="flex"; document.getElementById("creditsPanel").style.display="none";});
+document.getElementById("creditsBtn").addEventListener("click",()=>{document.getElementById("creditsPanel").style.display="block"; document.getElementById("addCategoryPanel").style.display="none";});
 document.getElementById("createCategoryBtn").addEventListener("click",()=>{
   const name=document.getElementById("newCategoryName").value||"New Tier";
-  createCustomTier(name,selectedColor);
-  document.getElementById
+  createTier(Date.now(),name); document.getElementById("newCategoryName").value="";
+});
+</script>
+
+</body>
+</html>
